# MIB-Generator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  calib.py  data_gen.py  gener.py  load.py  longdata.py  main.py  packet.py  packet_methods.py  parc.py  parh.py  paths.json5  setup.cfg  visualiser.py
construction/: TC_packet.py  TC_packet_methods.py  TM_packet.py  TM_packet_methods.py  calib.py  packet.py  packet_methods.py
data/: __init__.py  config.json5  longdata.py  paths.json5
docs/: about.rst  change.rst  conf.py  construction.rst  generation.rst  index.rst  installation.rst  mib_generator.construction.rst  mib_generator.data.rst  mib_generator.generation.rst  mib_generator.gui.rst  mib_generator.main.rst  mib_generator.parsing.rst  mib_generator.rst  mib_generator.temp.rst  mib_generator.utilities.rst  parsing.rst  requirements.txt  samples.rst  usage.rst
docs/_build/: .buildinfo  about.html  analysis.construction.html  analysis.data.html  analysis.generation.html  analysis.html  analysis.parsing.html  analysis.utilities.html  api.html  change.html  construction.html  data.html  generation.html  genindex.html  index.html  main.html  modules.html  objects.inv  parsing.html  py-modindex.html  search.html  searchindex.js  usage.html  utilities.html
docs/_build/.doctrees/: about.doctree  analysis.construction.doctree  analysis.data.doctree  analysis.doctree  analysis.generation.doctree  api.doctree  (+13 more)
generation/: gener.py
parsing/: __init__.py  load.py  par_cfile.py  par_header.py  par_methods.py  parc.py  parh.py  parser_main.py
src/mib_generator/: __init__.py
utilities/: __init__.py  data_gen.py  path_update.py  update.py  visualiser.py
(+85 files in other folders)
