[metadata]
name = mib-generator
version = 0.1.1
author = Josef Vácha
author_email = josefvc16@gmail.com
url = https://github.com/vachaj11/MIB-generator
description = Generator of SCOS 2000 MIB databases.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    json5
    PySide6
    python-docx
package_dir=
    =src
zip_safe = True
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mib-gen = mib_generator.main.cli:cli_run
[options.package_data]
* = README.md, *.json5
